--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.jakewharton:butterknife:6.1.0'
-
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.pkmmte.view:circularimageview:1.1'
 }
