--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,5 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support:design:22.2.0'
-    compile 'com.pkmmte.view:circularimageview:1.1'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
