--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support:design:22.2.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
 }
