--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.android.support:design:22.2.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.rockerhieu.emojicon:library:1.3.1'
+    compile 'com.jakewharton:butterknife:8.0.1'
 }
