--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,14 @@
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:supportsRtl="true">
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme"
+    >
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -19,8 +22,14 @@
         </activity>
         <activity
                 android:name=".HomeActivity"
-                android:label="@string/title_activity_home"
                 android:theme="@style/GigPoolTheme">
+        </activity>
+        <activity
+                android:name=".ChatMessagesActivity"
+        >
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="test.lezwon.firstapp.HomeActivity" />
         </activity>
     </application>
 
