--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 21
@@ -29,4 +30,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.rockerhieu.emojicon:library:1.3.1'
     compile 'com.jakewharton:butterknife:8.0.1'
+
+    apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
