added message ListView added 70% with scaling for main activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
         >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -26,7 +25,7 @@
         </activity>
         <activity
                 android:name=".ChatMessagesActivity"
-                android:windowSoftInputMode="stateVisible|adjustPan"
+                android:windowSoftInputMode="stateUnspecified|adjustPan"
         >
 
             <meta-data
