--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,17 +7,12 @@
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-    >
+            android:theme="@style/AppTheme">
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
         </activity>
         <activity
                 android:name=".HomeActivity"
@@ -25,12 +20,18 @@
         </activity>
         <activity
                 android:name=".ChatMessagesActivity"
-                android:windowSoftInputMode="stateUnspecified|adjustPan"
-        >
-
+                android:windowSoftInputMode="stateUnspecified|adjustPan">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value="test.lezwon.firstapp.HomeActivity" />
+                    android:value="test.lezwon.firstapp.HomeActivity"/>
+        </activity>
+        <activity android:name=".RegisterActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
     </application>
 
