--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.rockerhieu.emojicon:library:1.3.1'
     compile 'com.jakewharton:butterknife:8.0.1'
+    compile 'com.azimolabs.maskformatter:maskformatter:0.2'
 }
