--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        apply plugin: 'maven'
+        apply plugin: 'idea'
 
 
         // NOTE: Do not place your application dependencies here; they belong
