--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    //    compile 'com.github.ozodrukh:CircularReveal:2.0.1'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:design:22.2.0'
