--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
                 android:name=".MainActivity"
                 android:label="@string/app_name"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
         </activity>
         <activity
                 android:name=".HomeActivity"
@@ -27,9 +26,11 @@
         </activity>
         <activity android:name=".RegisterActivity">
 
+        </activity>
+
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
