--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@
 buildscript {
     repositories {
         jcenter()
-
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0'
@@ -25,4 +24,9 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
 }
