--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'assets/fonts'] } }
 }
 
 dependencies {
@@ -34,4 +35,5 @@ dependencies {
     compile 'com.rockerhieu.emojicon:library:1.3.1'
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.azimolabs.maskformatter:maskformatter:0.2'
+//    compile 'com.shawnlin:number-picker:2.1.0'
 }
