--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,14 +26,18 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
-    //    compile 'com.github.ozodrukh:CircularReveal:2.0.1'
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.android.support:design:22.2.0'
-    compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.rockerhieu.emojicon:library:1.3.1'
-    compile 'com.jakewharton:butterknife:8.0.1'
-    compile 'com.azimolabs.maskformatter:maskformatter:0.2'
+//        compile 'com.github.ozodrukh:CircularReveal:2.0.1'
+        compile "org.igniterealtime.smack:smack-java7:4.1.8"
+        compile 'com.android.support:appcompat-v7:22.2.0'
+        compile 'com.android.support:support-v4:21.0.3'
+        compile 'com.android.support:design:22.2.0'
+        compile 'de.hdodenhof:circleimageview:2.0.0'
+        compile 'com.android.support:recyclerview-v7:23.1.1'
+        compile 'com.rockerhieu.emojicon:library:1.3.1'
+        compile 'com.jakewharton:butterknife:8.0.1'
+        compile 'com.azimolabs.maskformatter:maskformatter:0.2'
+        compile 'com.google.firebase:firebase-messaging:9.8.0'
 //    compile 'com.shawnlin:number-picker:2.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
